# Rust-Little-Project

./: .gitignore
Journal/: Cargo.toml
Journal/src/: cli.rs  main.rs  task.rs
Snake/: Cargo.toml
Snake/src/: game.rs  main.rs  snake.rs
TrackSpent/: Cargo.toml  diesel.toml
TrackSpent/migrations/2024-07-31-151728_create_users/: up.sql
TrackSpent/src/: display.rs  main.rs  models.rs  spent.rs
TrackSpent/static/: app.js  index.html
budget_tracker/: Cargo.toml
budget_tracker/src/: cli.rs  main.rs  task.rs
