[package]
name = "TrackSpent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
prettytable = "0.10.0"
chrono = "0.4.19"
warp = "0.3"
tokio = {version = "1", features = ["full"]}
diesel = { version = "2.2.2", features = ["sqlite"]}
dotenv = "0.15.0"
